# CardioAssist

./: .gitignore  .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/src/routes/: index.ts  ml-proxy.ts
artifacts/cardioassist/: index.html  package.json
artifacts/cardioassist/.replit-artifact/: artifact.toml
artifacts/cardioassist/src/: App.tsx  index.css
artifacts/cardioassist/src/components/: layout.tsx
artifacts/cardioassist/src/pages/: about.tsx  analytics.tsx  dashboard.tsx  home.tsx
attached_assets/: Pasted-Restructure-this-entire-project-into-a-clean-production_1775108106891.txt  Pasted-Upgrade-the-CardioAssist-dashboard-into-a-premium-SaaS-_1775018288810.txt  Pasted-You-are-a-senior-AI-engineer-ML-engineer-and-full-stack_1775017223935.txt
backend/: .env.example  package.json  requirements.txt  scaler.pkl  train_model.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: about.tsx  analytics.tsx  dashboard.tsx
lib/api-spec/: openapi.yaml
ml-backend/: main.py  metrics.json  model.pkl
